# fastapi-llm-ticket-classifier

./: .dockerignore  .env.example  .gitignore  BANGLA_DOCUMENTATION.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test.db
app/: __init__.py  config.py  database.py  main.py  redis_client.py
app/models/: __init__.py  api_cost.py  classification.py  ticket.py
app/routers/: ._health.py  analytics.py  health.py  tickets.py
app/schemas/: __init__.py  analytics.py  classification.py  ticket.py
app/services/: classifier.py  cost_tracker.py  suggester.py
app/utils/: exceptions.py  logging.py
tests/: conftest.py  test_analytics.py  test_classifier.py  test_health.py  test_tickets.py
